new proj/src/objects/GE_HQ_P_L_Specific_Info__c.object
<CustomObject>
    <description>This Object is used to store P&amp;L Specific Information for each Account</description>
    <fields>
        <fullName>GE_ES_Env_Prim_Ind__c</fullName>
        <label>Primary Industry</label>
        <picklist>
            <picklistValues>
                <fullName>ALUMINUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPHALT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAG CONVERTORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-INDUSTRIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-INSTITUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOILER-UTILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREATHER FILTER MANUFACTURERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARBON BLACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CERAMIC TILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-AGRI,FERTLZRS,PESTICIDES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-PAINTS,PIGMENTS,VARNISHES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-PETRO,REFINING,COAL PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-PHARM, COSMETICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-PLASTICS RESIN PRODUCERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEM-SOAPS/DETERGENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPUTER DISK DRIVE FILTER MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONCRETE BLOCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONICS/CABLE MANUFACTURER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERROALLOY/SILICA MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOUNDRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARMET-APPAREL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARMET-FOOTWEAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARMET-MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARMET-PROTECTIVE APPAREL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASKET MANUFACTURERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLASS/INSULATION</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_MCS_Sp_Agmt__c</fullName>
        <label>Special Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>P_L_Specific_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bus_Tier_1__c</fullName>
        <label>Business - Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier2__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier1__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Well Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_DUNS_Number__c</formula>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID_Fm__c</fullName>
        <description>Stores the combination text of Duns No,Business Tier1 and P&amp;L, to avoid duplicity.</description>
        <formula>GE_HQ_DUNS_Number__c+&apos;-&apos;+TEXT( GE_HQ_Buss_Tier__c )+&apos;-&apos;+TEXT( GE_HQ_Buss_Tier1__c )+&apos;-&apos;+TEXT(GE_HQ_Buss_Tier2__c)</formula>
        <label>External ID Fm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <description>If this field is saved, i.e the unique combination didn&apos;t exist already for that account. And the record can be saved else not.</description>
        <label>External ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L_Hyp__c</fullName>
        <formula>IF(AND( TEXT(GE_HQ_Buss_Tier1__c)  &lt;&gt;null,  TEXT(GE_HQ_Buss_Tier2__c)&lt;&gt;null ) , HYPERLINK(&apos;/&apos;+ Id ,   TEXT( GE_HQ_Buss_Tier1__c ) +&apos;-&apos;+ TEXT(GE_HQ_Buss_Tier2__c  ), &quot;_blank&quot;),HYPERLINK(&apos;/&apos;+Id, Name ))</formula>
        <label>P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Promotion__c</fullName>
        <label>Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Invite - African American Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Womens Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Minds &amp; Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - City Swings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - CEO Roundtable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - M&amp;C Customer Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - GE Customer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - National Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Local Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Crotonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Price/Product Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Account Primary Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>P&amp;L Specific Information</label>
    <nameField>
        <displayFormat>PLS-{00000000}</displayFormat>
        <label>P&amp;L Specific Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;L Specific Information</pluralLabel>
    <recordTypes>
        <fullName>MCS</fullName>
        <active>true</active>
        <description>Used for MCS</description>
        <label>MCS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>